# clicker

./: .env.example  .gitignore  CLAUDE.md  HOMEBREW_TAP.md  LICENSE  Makefile  README.md  console.py  main.py  pyproject.toml  pytest.ini  session.py
.claude/commands/: update-pricing.md
.github/: SECRETS.md
.github/workflows/: test.yml
agent/: __init__.py  actions.py  loop.py  prompts.py
browser/: __init__.py  controller.py
docs/: PERSISTENT_SESSION.md
llm_caller/: __init__.py  anthropic_vertex.py  base.py  factory.py  google_vertex.py  openai.py  pricing.py
tests/: README.md  __init__.py  conftest.py  test_actions.py  test_integration.py  test_pricing.py  test_session.py
